@@ -1,3 +1,10 @@
+2011-02-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/templates.c:
+   Fix segfault when inserting e.g. fileheader template when the
+   template file is empty (#3070913, thanks to lphilpot).
+
+
 2011-02-21  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * plugins/filebrowser.c:
